// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rollup-plugin-dts works for testcase "export-simple-function" 1`] = `
"declare function foo(): void;

export { foo };"
`;

exports[`rollup-plugin-dts works for testcase "export-simple-interface" 1`] = `
"interface Foo {
}

export { Foo };"
`;

exports[`rollup-plugin-dts works for testcase "import-referenced-interface" 1`] = `
"interface Bar {
}

interface Foo {
    bar: Bar;
}

export { Foo };"
`;

exports[`rollup-plugin-dts works for testcase "import-unused-interface" 1`] = `
"interface Foo {
}

export { Foo };"
`;

exports[`rollup-plugin-dts works for testcase "keep-extended-interface" 1`] = `
"interface Bar {
}
interface Foo extends Bar {
}

export { Foo };"
`;

exports[`rollup-plugin-dts works for testcase "keep-interface-definition" 1`] = `
"interface Foo {
    a: string;
    b: Array<number>;
}

export { Foo };"
`;

exports[`rollup-plugin-dts works for testcase "keep-referenced-interface" 1`] = `
"interface Bar {
}
interface Foo {
    bar: Bar;
}

export { Foo };"
`;

exports[`rollup-plugin-dts works for testcase "remove-function-body" 1`] = `
"declare function foo(): void;

export { foo };"
`;

exports[`rollup-plugin-dts works for testcase "remove-unexported-function" 1`] = `
"declare function foo(): void;

export { foo };"
`;

exports[`rollup-plugin-dts works for testcase "remove-unexported-interface" 1`] = `
"interface Foo {
}

export { Foo };"
`;
